[tool.poetry]
name = "eth-stdlib"
version = "0.1.0"
description = "Ethereum Standard Library for Python"
authors = ["Edward Amor <edward.amor3@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/skellet0r/eth-stdlib"
keywords = ["ethereum"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries"
]
packages = [
    { include = "ethlib", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
