[tool.poetry]
name = "eth-stdlib"
version = "0.2.4"
description = "Ethereum Standard Library for Python"
authors = ["Edward Amor <edward.amor3@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/skellet0r/eth-stdlib"
documentation = "https://eth-stdlib.readthedocs.io/en/latest"
keywords = ["ethereum"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries"
]
packages = [
    { include = "eth", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
safe-pysha3 = "^1.0.3"
hypothesis = {version = "^6.58.0", optional = true}

[tool.poetry.extras]
hypothesis = ["hypothesis"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.54.5"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs.dependencies]
Sphinx = {version = "^5.2.2", allow-prereleases = true}
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "--cov src/ --cov-report term --cov-report html --no-cov-on-fail"
